[metadata]
name = two-snakes-rinman24
version = 0.0.1
author = Richard Headen Inman
author_email = rinman24@gmail.com
description = Two brothers writing Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rinman24/two-snakes
project_urls =
    Bug Tracker = https://github.com/rinman24/two-snakes/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = two_snakes
packages = find:
python_requires = >=3.9

[options.packages.find]
where = two_snakes